# basic_bot

./: .flake8  .gitignore  .mypy.ini  404.html  BLOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  basic_bot.yml  build-docs.py  build.sh  deploy-docs.sh  index.html  install-dev.sh  install.sh  lint.sh  mkdocs.yml  mypy.ini  pydoc-markdown.yml  pyproject.toml  remove-types.py  requirements.txt  requirements_CI.txt  requirements_base.txt  search.html  servo_config.yml  test.sh  upload.sh  webrtc_test.html
.github/workflows/: ci.yml
Api Docs/commons/base_camera/: index.html
Api Docs/commons/camera_opencv/: index.html
Api Docs/commons/camera_picamera/: index.html
Api Docs/commons/coco_lables/: index.html
Api Docs/commons/config_file_schema/: index.html
Api Docs/commons/constants/: index.html
Api Docs/commons/env/: index.html
Api Docs/commons/fps_stats/: index.html
Api Docs/commons/hub_state/: index.html
Api Docs/commons/hub_state_monitor/: index.html
Api Docs/commons/log/: index.html
Api Docs/commons/messages/: index.html
Api Docs/commons/mjpeg_video/: index.html
Api Docs/commons/persist_state/: index.html
Api Docs/commons/recognition_provider/: index.html
Api Docs/commons/servo/: index.html
Api Docs/commons/servo_config/: index.html
Api Docs/commons/servo_config_file_schema/: index.html
Api Docs/commons/servo_pca9685/: index.html
Api Docs/debug/: index.html
Api Docs/scripts/: index.html
Api Docs/services/: index.html
Configuration/: index.html
Configuration/Config File Schema/: index.html
Configuration/Environment Variables/: index.html
Installation Guides/setup_on_pi_bookworm/: index.html
Installation Guides/setup_on_pi_bullseye/: index.html
commons/base_camera/: index.html
commons/camera_opencv/: index.html
commons/camera_picamera/: index.html
commons/coco_lables/: index.html
commons/constants/: index.html
commons/env/: index.html
commons/fps_stats/: index.html
commons/hub_state/: index.html
commons/hub_state_monitor/: index.html
commons/log/: index.html
commons/messages/: index.html
commons/persist_state/: index.html
commons/pytorch_detect/: index.html
commons/recognition_provider/: index.html
commons/servo/: index.html
commons/tflite_detect/: index.html
commons/web_utils/: index.html
debug/test_ai-edge-litert/: index.html
debug/test_opencv_capture/: index.html
debug/test_opencv_img/: index.html
debug/test_picamera2_capture/: index.html
debug/test_tflite_runtime/: index.html
docs/: index.md  og_original_goals.md  setup_on_pi5.md  setup_on_pi_bookworm.md
docs/Configuration/: index.md
docs/Installation Guides/: setup_on_pi_bookworm.md  setup_on_pi_bullseye.md
docs/_archives/: validating_bookworm.md
docs/services/: central_hub.md  motor_control_2w.md  vision_cv2.md  web_server.md
docs/zzz/: validating_bookworm.md
og_original_goals/: index.html
public/: webrtc_test.html
sbin/: downgrade_images.py  killall_bb_procs.py  listall_bb_procs.py  vid_duration.py
scripts/bb_create/: index.html
scripts/bb_restart/: index.html
scripts/bb_start/: index.html
scripts/bb_stop/: index.html
search/: search_index.json
services/central_hub/: index.html
services/motor_control_2w/: index.html
services/vision/: index.html
services/vision_cv2/: index.html
services/web_server/: index.html
setup/: install_picamera.sh
setup_on_pi5/: index.html
setup_on_pi_bookworm/: index.html
src/basic_bot/: README.md  bb_create.py  bb_killall.py  bb_ps.py  bb_restart.py  bb_start.py  bb_stop.py  create.py  services.cfg  start.py  stop.py
src/commons/: hub_state.py
stylesheets/: extra.css
tests/: conftest.py  persisted_state.json  test_central_hub.py  test_open_cv.py  test_vision_cv2.py
tests/e2e_tests/: test_create.py  test_latest_build.py
tests/field_tests/: README.md  test_camera_picamera.py
tests/helpers/: start_stop.py
tests/integration_tests/: test_central_hub.py  test_central_hub_outbound.py  test_hub_state_monitor.py  test_motor_control_2w.py  test_open_cv.py  test_servo_control.py  test_system_stats.py  test_tflite_detect.py  test_vision.py  test_vision_cv2.py
tests/unit_tests/: test_persist_state.py
tests_e2e/: test_latest_build.py
zzz/og_original_goals/: index.html
zzz/validating_bookworm/: index.html
(+124 files in other folders)
