[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "basic_bot"
version = "0.1.0"
authors = [{ name = "Bee Wilkerson", email = "bee.wilkerson@ymail.com" }]
description = "A simpler alternative to ROS"
readme = "README.md"
dependencies = [
    # WebRTC dependencies
    "aiohttp",
    "aiohttp_cors",
    "aiortc",
    "build",
    "cachetools",
    "flask-cors",
    "flask",
    "jsonschema",
    "numpy<2",
    "opencv-python>=4.11",
    "protobuf>=3.18.0,<4",
    "psutil",
    "pytest",
    "pyyaml",
    "requests",
    # tflite-runtime is currently only supported on Linux
    "tflite-runtime; platform_system=='Linux'",
    "setuptools>=57.0",
    "websockets==10.4",
    # TODO: move to requirements.txt?  I think this is only used for
    #   the basic_bot integrations tests
    "websocket-client",
]
# These are the dependencies of the installed basic_bot package
#  for dev / build dependencies, use `pip install -r requirements.txt`

requires-python = ">=3.9"

[project.scripts]
bb_create = "basic_bot.bb_create:main"
bb_start = "basic_bot.bb_start:main"
bb_stop = "basic_bot.bb_stop:main"
bb_ps = "basic_bot.bb_ps:main"
bb_killall = "basic_bot.bb_killall:main"


[project.urls]
"Homepage" = "https://github.com/littlebee/basic_bot"
"Bug Tracker" = "https://github.com/littlebee/basic_bot/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
created_files = ["src/basic_bot/created_files/*"]
basic_bot = ["py.typed"]
